--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,13 +17,16 @@ jobs:
       - name: Install toolchain
         uses: actions-rs/toolchain@v1
         with:
-          toolchain: stable
+          toolchain: nightly
           profile: minimal
           override: true
 
       - uses: Swatinem/rust-cache@v1
         with:
           cache-on-failure: true
+
+      - name: install clippy
+        run: rustup component add clippy --toolchain nightly-x86_64-unknown-linux-gnu
 
       - name: cargo clippy
         run: cargo clippy
